# SymmetricGraph

./: Algebra.hs  Graph.hs  GraphAlg.hs  Matrix.hs  README.md  SymOut.hs  Symmetric.hs  cabal.project  compute_spectrum.py  exampleAlgebras.hs  testGraph.hs  writeAdj.hs  writeEdges.hs
CayleyOps/: Abstract.cabal  CHANGELOG.md
CayleyOps/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
CayleyOps/dist-newstyle/packagedb/ghc-9.0.1/: CayleyOps-0.1.0.0-inplace.conf  package.cache
CayleyOps/src/Cayley/: Algebra.hs  Algebra.hs.old  Examples.hs  Graph.hs  GraphAlg.hs  Symmetric.hs
GraphOut/: .GraphOut.cabal.swp  CHANGELOG.md  GraphOut.cabal  compute_spectrum.py
GraphOut/app/: writeAdj.hs  writeCube.hs  writeEdges.hs
GraphOut/src/: PythonNX.hs
GraphOut/src/Cayley/: .SymOut.hs.swp  SymOut.hs
pyRepl/: pyRepl.cabal
src/Cayley/: Matrix.hs
