cabal-version:      2.4
name:               pyRepl
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Cube
maintainer:         cubebert549@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  PythonNX

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.15.0.0,
        containers ^>=0.6.4.1,
        process ^>=1.6.11.0,
        unix ^>=2.7.2.2,
        CayleyOps >= 0.1.0

    hs-source-dirs:   src
    default-language: Haskell2010
